# alasma

./: .gitignore  Cargo.toml  index.html  postrges-docker.yml  schema.sql  styles.css
api/: Cargo.toml
api/db/migrations/: 1_initial_schema.sql
api/src/: main.rs  repo.rs  service.rs
api/src/repo/: bill.rs  boughts.rs  cargos.rs  client.rs  company.rs  sell_bill.rs  sells.rs  sheet.rs  types.rs
api/src/service/: bill.rs  boughts.rs  cargos.rs  client.rs  company.rs  sell_bill.rs  sells.rs  sheet.rs  types.rs
excel-io/: Cargo.toml
excel-io/src/: boughts.rs  lib.rs  sells.rs
handle_excel/: boughts.ts  main.ts  main_test.ts  packages.ts  sells.ts  types.ts
models/: Cargo.toml
models/src/: backend_api.rs  lib.rs
src/: app.rs  boughts.rs  cargos.rs  main.rs  sales.rs  shared.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  excel_writers.rs  main.rs
src/sales/: add.rs  show.rs
src/shared/: component.rs  function.rs
tester/: Cargo.toml
tester/src/: main.rs
