[package]
name = "alasama-ui"
version = "0.0.0"
edition = "2021"

[workspace]
members = ["src-tauri"]

[workspace.dependencies]
chrono = "0.4.26"
serde = "^1"
serde_json = "^1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.3.1", features = ["stable"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
