[package]
name = "alasama-ui"
version = "0.0.0"
edition = "2021"

[workspace]
members = ["src-tauri","api"]

[workspace.dependencies]
serde = "^1"
serde_json = "^1"
chrono = "^0.4"
sqlx = "^0.6"
uuid = "^1"
strum = "^0.24"
strum_macros = "^0.24"
bcrypt = "^0.13"
dotenv  = "^0.15"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
