[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
members = ["src-tauri","api","models"]


[package]
name = "alasama-ui"
version.workspace = true
edition.workspace = true

[workspace.dependencies]
models = {path = "./models"}
serde = "^1"
serde_json = "^1"
chrono = "^0.4"
sqlx = "^0.6"
uuid = "^1"
strum = "^0.24"
strum_macros = "^0.24"
bcrypt = "^0.13"
dotenv  = "^0.15"
bigdecimal = "0.3.1"
anyhow = "1.0.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
models = {workspace = true}
uuid = {workspace = true , features = ["serde"]}
chrono = {workspace = true , features = ["serde"]}
serde_json = {workspace = true}
bigdecimal = {workspace = true , features = ["serde"]}
leptos = { version = "0.4.5" , features = ["csr"] }
leptos_router = { version = "0.4.5" , features = ["csr"]}
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys",features = ["tauri","event"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen-futures = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
futures = "0.3.28"
