[package]
name = "models"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {workspace = true , features = ["derive"]}
uuid = {workspace = true, features = ["serde"] }
bigdecimal = {workspace = true , features = ["serde"]}
chrono = {workspace = true , features = ["serde"]}